ARROW-16238: [C++] Fix nullptr dereference when pre-buffering IPC reads